Fixes for Coverity Defects of Category : FB.DM_NUMBER_CTOR, FB.DM_STRING_CTOR, FB.DM_STRING_VOID_CTOR